[gd_scene load_steps=8 format=3 uid="uid://c8mepxfkqbdso"]

[ext_resource type="Script" uid="uid://1bcfmfdo00sw" path="res://scripts/level 3/tv.gd" id="1_2os3q"]
[ext_resource type="Texture2D" uid="uid://boj23gxme8p18" path="res://assets/level 3/textures/Table.atlastex" id="1_5xwnk"]
[ext_resource type="Texture2D" uid="uid://dp5ca0rf87nai" path="res://assets/level 3/textures/TV.atlastex" id="2_2os3q"]
[ext_resource type="Texture2D" uid="uid://yfxbvsuvgkpq" path="res://assets/level 3/Anomalies/TvAnomally.atlastex" id="4_m50ng"]
[ext_resource type="PackedScene" uid="uid://bg5u0ru0atlxd" path="res://scenes/level 3/trigger.tscn" id="4_xiq3r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h5ql5"]
size = Vector2(39, 27.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kp186"]
size = Vector2(43, 34)

[node name="CouchBack" type="StaticBody2D"]
collision_mask = 3
script = ExtResource("1_2os3q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, -8.375)
shape = SubResource("RectangleShape2D_h5ql5")

[node name="Table" type="Sprite2D" parent="."]
position = Vector2(-1.4999993, 1.1920929e-07)
scale = Vector2(0.58750004, 0.39583334)
texture = ExtResource("1_5xwnk")

[node name="Tv" type="Sprite2D" parent="."]
position = Vector2(-2, -16)
scale = Vector2(0.91666675, 0.9375)
texture = ExtResource("2_2os3q")

[node name="TvAnomally" type="Sprite2D" parent="."]
visible = false
position = Vector2(-1.75, -16)
scale = Vector2(0.9222222, 0.93749994)
texture = ExtResource("4_m50ng")

[node name="trigger" parent="." instance=ExtResource("4_xiq3r")]
position = Vector2(-2, -12)

[node name="CollisionShape2D" type="CollisionShape2D" parent="trigger"]
position = Vector2(0.5, 2)
shape = SubResource("RectangleShape2D_kp186")

[connection signal="body_entered" from="trigger" to="." method="_on_trigger_body_entered"]
[connection signal="body_exited" from="trigger" to="." method="_on_trigger_body_exited"]
